--- a/bistro-boss-client-menu-and-order/package.json
+++ b/bistro-boss-client-menu-and-order/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
     "daisyui": "^2.51.6",
+    "eventemitter3": "^5.0.1",
+    "events": "^3.3.0",
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^9.3.2"
