--- a/bistro-boss-client-menu-and-order/package.json
+++ b/bistro-boss-client-menu-and-order/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@tanstack/react-query": "^5.62.15",
+    "axios": "^1.7.9",
     "daisyui": "^2.51.6",
     "eventemitter3": "^5.0.1",
     "events": "^3.3.0",
@@ -21,11 +23,14 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-notifications-component": "^4.0.1",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.1",
+    "sonner": "^1.7.1",
     "sort-by": "^1.2.0",
     "swiper": "^9.3.2"
   },
