--- a/bistro-boss-client-menu-and-order/package.json
+++ b/bistro-boss-client-menu-and-order/package.json
@@ -32,6 +32,7 @@
     "react-tabs": "^6.0.1",
     "sonner": "^1.7.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
