--- a/bistro-boss-client-menu-and-order/package.json
+++ b/bistro-boss-client-menu-and-order/package.json
@@ -17,6 +17,7 @@
     "eventemitter3": "^5.0.1",
     "events": "^3.3.0",
     "firebase": "^11.1.0",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
